# clash-subscription-manager

./: .clash-api-config.sample  .gitignore  README.md  clash-proxy  clash-sub  clash_proxy_selector.py  clash_sub_manager.py  config.json.sample  pyproject.toml
src/clash_sub_manager/: cli.py  config.py
